add logging & `getTodoByPagination`
